(feat) validation config: requiredByDefault (test) JMH test with GC profile